# advent_of_code_2024

./: .gitignore  README.md  pyproject.toml
day_eight/: day_08.py
day_eight/tests/: test_08.py
day_eleven/: day_11.py
day_eleven/tests/: test_11.py
day_five/: day_05.py
day_five/tests/: test_05.py
day_four/: day_04.py
day_four/tests/: test_04.py
day_fourteen/: day_14.py
day_fourteen/tests/: test_14.py
day_nine/: day_09.py
day_nine/tests/: test_09.py
day_one/: day_01.py
day_one/tests/: test_01.py
day_seven/: day_07.py
day_seven/tests/: test_07.py
day_six/: day_06.py
day_six/tests/: test_06.py
day_ten/: day_10.py
day_ten/tests/: test_10.py
day_thirteen/: day_13.py
day_thirteen/tests/: test_13.py
day_three/: day_03.py
day_three/tests/: test_03.py
day_two/: day_02.py
day_two/tests/: test_02.py
utils/: file.py
